fix: set dark mode color scheme on page load

--- a/styles/pages/_blog.scss
+++ b/styles/pages/_blog.scss
@@ -79,7 +79,7 @@
       }
     }
     &-date {
-      font-size: 0.875rem;
+      font-size: 1rem;
       color: var(--c-black-md);
       margin-top: 0.625rem;
       // @media only screen and (max-width: 600px) {
